--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -89,10 +89,9 @@
 	<div class="row mt-2">
 		<div class="col-lg-8 col-md-12">
 			<div class=" form-group">
-				<label >{{"shared.jobLocation" | translate }}</label>
-				<mat-form-field class="example-chip-list" style="width: 100%;" >
-					
-					<mat-chip-list #chipList aria-label="address">
+				<label >{{"shared.jobLocation" | translate }}<span class="required-asterisk">*</span></label>
+				<mat-form-field class="example-chip-list" style="width: 100%;">	
+					<mat-chip-list #chipList aria-label="address" >
 						<mat-chip *ngFor="let addresss of address;let i=index;" [selectable]="selectable"
 							[removable]="removable" (removed)="onRemove(i)">
 							{{addresss}}
@@ -110,6 +109,8 @@
 							(matChipInputTokenEnd)="add($event)">
 					</mat-chip-list>
 				</mat-form-field>
+				<app-control-messages [control]="t['job_locations']"></app-control-messages>
+				<small  id="jobLocationsErroe" class="text-danger" style="display:none;">{{'Field is required.'}}</small>
 			</div>	
 		</div>	
 		<div class="col-lg-4 col-md-6 matches-8">
