--- a/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
@@ -6,6 +6,7 @@
 				<span class="required-asterisk">*</span>
 			</h6>
 		</div>
+		<small  id="errorScreeningProcess" class="text-danger" style="display:none;">{{'Screening Process is required.'}}</small>
 	</div>
 	<div class="col-lg-12" *ngIf="(!screeningProcess || screeningProcess.length==0) && t.controls.length == 0 ">
 		<div class="row mt-3 mb-3">
