time picker focus for safari -bug fixing

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -115,7 +115,7 @@
 		</div>	
 		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
-				<label>{{"shared.workTiming" | translate}}</label>
+				<label id="timeError">{{"shared.workTiming" | translate}}</label>
 				<div class="row mt-2">
 					<!--<div class="col-lg-6 col-md-6 ">
 						<input type="time"  formControlName="min" (change)="getValue($event,'min')" [max]="childForm['value']['jobInfo']['min']" class="form-control " >
